# Inventory-Management-System

./: .gitignore  CMakeLists.txt  README.md
data/: products.csv  transactions.csv
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SPECIFICATION.md  USER_GUIDE.md
include/: ElectronicsProduct.h  FileManager.h  InventoryManager.h  PerishableProduct.h  Product.h  RegularProduct.h  Transaction.h  UIManager.h  Utils.h
src/: ElectronicsProduct.cpp  FileManager.cpp  InventoryManager.cpp  PerishableProduct.cpp  Product.cpp  RegularProduct.cpp  Transaction.cpp  UIManager.cpp  Utils.cpp  main.cpp
